# resvg

./: .typos.toml  CHANGELOG.md  README.md
.github/workflows/: main.yml  tagged-release.yml
crates/c-api/: Cargo.toml  ResvgQt.h  lib.rs
crates/resvg/: Cargo.toml
crates/resvg/examples/: draw_bboxes.rs
crates/resvg/src/: clip.rs  image.rs  main.rs  path.rs  render.rs
crates/resvg/src/filter/: box_blur.rs  component_transfer.rs  composite.rs  convolve_matrix.rs  lighting.rs  turbulence.rs
crates/resvg/tests/fonts/: README.md
crates/resvg/tests/integration/: main.rs  render.rs
crates/usvg/: Cargo.toml
crates/usvg/codegen/: Cargo.toml  attributes.txt
crates/usvg/src/: main.rs  writer.rs
crates/usvg/src/parser/: converter.rs  filter.rs  image.rs  marker.rs  mask.rs  paint_server.rs  switch.rs  text.rs
crates/usvg/src/parser/svgtree/: mod.rs  names.rs  text.rs
crates/usvg/src/text/: flatten.rs  layout.rs
crates/usvg/src/tree/: filter.rs  geom.rs  mod.rs  text.rs
crates/usvg/tests/: parser.rs  write.rs
tools/explorer-thumbnailer/: Cargo.toml
tools/explorer-thumbnailer/install/: installer.iss
tools/viewsvg/: viewsvg.pro
