[package]
name = "usvg"
version = "0.46.0"
keywords = ["svg"]
license.workspace = true
edition = "2024"
rust-version = "1.87.0"
description = "An SVG simplification library."
categories = ["multimedia::images"]
repository = "https://github.com/linebender/resvg"
documentation = "https://docs.rs/usvg/"
readme = "README.md"
exclude = ["tests"]
workspace = "../.."

[[bin]]
name = "usvg"
required-features = ["text", "system-fonts", "memmap-fonts"]

[dependencies]
base64 = "0.22" # for embedded images
log = "0.4"
pico-args = { version = "0.5", features = ["eq-separator"] }
strict-num = "0.1.1"
svgtypes = "0.16.1"
tiny-skia-path = "0.11.4"
xmlwriter = "0.1"

# parser
data-url = "0.3" # for href parsing
flate2 = { version = "1.1", default-features = false, features = ["rust_backend"] } # SVGZ decoding
imagesize = "0.14.0" # raster images size detection
kurbo = "0.13.0" # Bezier curves utils
roxmltree = "0.21.1"
simplecss = "0.2"
siphasher = "1.0" # perfect hash implementation

# text
fontdb = { version = "0.23.0", default-features = false, optional = true }
rustybuzz = { version = "0.20.1", optional = true }
# Note: ttf-parser is re-exported from rustybuzz, but we need gvar-alloc for variable fonts
# with many variation axes (like Roboto Flex which has 13 axes)
ttf-parser = { version = "0.25.1", features = ["gvar-alloc"], optional = true }
unicode-bidi = { version = "0.3", optional = true }
unicode-script = { version = "0.5", optional = true }
unicode-vo = { version = "0.1", optional = true }

[dev-dependencies]
once_cell = "1.21"

[features]
default = ["text", "system-fonts", "memmap-fonts"]
# Enables text-to-path conversion support.
# Adds around 400KiB to your binary.
text = ["fontdb", "rustybuzz", "ttf-parser", "unicode-bidi", "unicode-script", "unicode-vo"]
# Enables system fonts loading.
system-fonts = ["fontdb/fs", "fontdb/fontconfig"]
# Enables font files memmaping for faster loading.
memmap-fonts = ["fontdb/memmap"]
